# aerial_robot_recognition

./: .travis.sh  .travis.yml  README.md
aerial_robot_perception/: CMakeLists.txt  README.md  package.xml
aerial_robot_perception/cfg/: DepthDistanceFilter.cfg  RectangleDetection.cfg
aerial_robot_perception/config/: HorizontalObjectDetectionConfig.yaml
aerial_robot_perception/include/aerial_robot_perception/: cluttered_brick_detection.h  depth_distance_filter.h  far_object_detection.h  find_object_with_size_filter.h  ground_object_detection.h  ground_object_detection_with_size_filter.h  horizontal_brick_detection.h  lane_cluster_detection.h  laser_line_extraction_ros.h  line_extraction.h  rectangle_detection.h  rectangle_detection_depth.h
aerial_robot_perception/launch/: cluttered_brick_detection.launch  create_points.launch  depth_distance_filter.launch  far_object_detection.launch  find_single_color_object.launch  horizontal_brick_detection.launch  horizontal_object_detection.launch  hsi_color_filter_pcl.launch  lane_cluster_detection.launch  laser_line_extraction.launch  rectangle_detection_depth.launch  rectangle_detection_with_depth_distance_filter.launch  single_color_ground_object_detection.launch  single_color_horizontal_object_detection.launch
aerial_robot_perception/plugins/nodelet/: aerial_robot_perception_nodelet.xml
aerial_robot_perception/sample/: sample_find_single_color_object.launch
aerial_robot_perception/scripts/: get_horizontal_object_info.py  install_sample_data.py  install_test_data.py
aerial_robot_perception/src/: cluttered_brick_detection.cpp  depth_distance_filter.cpp  far_object_detection.cpp  find_object_with_size_filter.cpp  ground_object_detection.cpp  ground_object_detection_with_size_filter.cpp  horizontal_brick_detection.cpp  lane_cluster_detection.cpp  laser_line_extraction_ros.cpp  line_extraction.cpp  rectangle_detection.cpp  rectangle_detection_depth.cpp
aerial_robot_perception/test/: CMakeLists.txt  horizontal_brick_detection.rviz  laser_line_extraction.rviz  test-horizontal_brick_detection.test  test-laser_line_extraction.test  test-single_color_ground_object_detection.test
aerial_robot_perception/test/data/: 2018-06-25-21-21-10_uav_with_red_object.bag
aerial_robot_recognition_msgs/: CMakeLists.txt  package.xml
